# SolarEnergy

./: .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-check.yml
docs/: conf.py  index.rst  requirements.txt  solarenergy.constants.rst  solarenergy.radiation.rst  solarenergy.rst  solarenergy.solar_panels.rst
solarenergy/: __init__.py  constants.py  radiation.py  solar_panels.py
tests/: context.py  context_test.py  se_test.py  test_se.py
